# Arch-linux

./: 1.txt  11.sh  13.sh  14.sh  15.sh  16.sh  17.sh  18.sh  2.sh  2.txt  20.sh  3.sh  4.sh  5.sh  6.sh  7.sh  8.sh  build.ninja  meson.build  string_internal.hpp
