project('ftxui', 'cpp',
  version: '4.1.1',
  default_options: ['cpp_std=c++17']
)

# Исходные файлы
sources = [
  'src/ftxui/component/component.cpp',
  'src/ftxui/component/component_options.cpp',
  'src/ftxui/component/event.cpp',
  'src/ftxui/component/screen_interactive.cpp',
  'src/ftxui/dom/automerge.cpp',
  'src/ftxui/dom/blink.cpp',
  'src/ftxui/dom/bold.cpp',
  'src/ftxui/dom/box.cpp',
  'src/ftxui/dom/canvas.cpp',
  'src/ftxui/dom/clear.cpp',
  'src/ftxui/dom/color.cpp',
  'src/ftxui/dom/dbox.cpp',
  'src/ftxui/dom/dim.cpp',
  'src/ftxui/dom/flex.cpp',
  'src/ftxui/dom/focus.cpp',
  'src/ftxui/dom/frame.cpp',
  'src/ftxui/dom/gauge.cpp',
  'src/ftxui/dom/graph.cpp',
  'src/ftxui/dom/gridbox.cpp',
  'src/ftxui/dom/hbox.cpp',
  'src/ftxui/dom/inverted.cpp',
  'src/ftxui/dom/linear_gradient.cpp',
  'src/ftxui/dom/paragraph.cpp',
  'src/ftxui/dom/reflect.cpp',
  'src/ftxui/dom/separator.cpp',
  'src/ftxui/dom/size.cpp',
  'src/ftxui/dom/spinner.cpp',
  'src/ftxui/dom/star.cpp',
  'src/ftxui/dom/strikethrough.cpp',
  'src/ftxui/dom/table.cpp',
  'src/ftxui/dom/text.cpp',
  'src/ftxui/dom/underlined.cpp',
  'src/ftxui/dom/util.cpp',
  'src/ftxui/dom/vbox.cpp',
  'src/ftxui/screen/color.cpp',
  'src/ftxui/screen/color_info.cpp',
  'src/ftxui/screen/screen.cpp',
  'src/ftxui/screen/string.cpp',
  'src/ftxui/screen/terminal.cpp',
]

# Заголовочные файлы
headers = [
  'include/ftxui/component/component.hpp',
  'include/ftxui/component/component_options.hpp',
  'include/ftxui/component/event.hpp',
  'include/ftxui/component/screen_interactive.hpp',
  'include/ftxui/dom/automerge.hpp',
  'include/ftxui/dom/blink.hpp',
  'include/ftxui/dom/bold.hpp',
  'include/ftxui/dom/box.hpp',
  'include/ftxui/dom/canvas.hpp',
  'include/ftxui/dom/clear.hpp',
  'include/ftxui/dom/color.hpp',
  'include/ftxui/dom/dbox.hpp',
  'include/ftxui/dom/dim.hpp',
  'include/ftxui/dom/elements.hpp',
  'include/ftxui/dom/flex.hpp',
  'include/ftxui/dom/focus.hpp',
  'include/ftxui/dom/frame.hpp',
  'include/ftxui/dom/gauge.hpp',
  'include/ftxui/dom/graph.hpp',
  'include/ftxui/dom/gridbox.hpp',
  'include/ftxui/dom/hbox.hpp',
  'include/ftxui/dom/inverted.hpp',
  'include/ftxui/dom/linear_gradient.hpp',
  'include/ftxui/dom/node.hpp',
  'include/ftxui/dom/paragraph.hpp',
  'include/ftxui/dom/reflect.hpp',
  'include/ftxui/dom/separator.hpp',
  'include/ftxui/dom/size.hpp',
  'include/ftxui/dom/spinner.hpp',
  'include/ftxui/dom/star.hpp',
  'include/ftxui/dom/strikethrough.hpp',
  'include/ftxui/dom/table.hpp',
  'include/ftxui/dom/text.hpp',
  'include/ftxui/dom/underlined.hpp',
  'include/ftxui/dom/util.hpp',
  'include/ftxui/dom/vbox.hpp',
  'include/ftxui/screen/color.hpp',
  'include/ftxui/screen/color_info.hpp',
  'include/ftxui/screen/screen.hpp',
  'include/ftxui/screen/string.hpp',
  'include/ftxui/screen/terminal.hpp',
]

# Создаем библиотеку
ftxui_lib = static_library('ftxui',
  sources,
  include_directories: include_directories('include'),
  cpp_args: ['-Wno-deprecated-declarations'],
  install: false
)

# Создаем dependency
ftxui_dep = declare_dependency(
  include_directories: include_directories('include'),
  link_with: ftxui_lib
)